<resources>
    <string name="app_name">Sports Guide</string>
    <string name="login_button">Login</string>
    <string name="login_name">Name:</string>
    <string name="login_age">Age:</string>
    <string name="login_email">Email-address:</string>
    <string name="login_nickname">Nickname:</string>
    <string name="register_button">Register</string>
    <string name="activity2_title">Registration</string>
    <string name="button_inspiration">Inspiration</string>
    <string name="button_fitness">Fitness/Training</string>
    <string name="button_rules">Rules</string>
    <string name="button_news">News</string>
    <string name="categories_title">Categories</string>
    <string name="music">Music</string>
    <string name="stories">Stories of successful sportsmen</string>
    <string name="password">Password:</string>
</resources>
