<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sportguide.Register"
    android:background="@color/lightgreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_name"
                android:textSize="30dp"/>
            <EditText
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:textSize="30dp"
                android:id="@+id/nameEditable" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_age"
                android:textSize="30dp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:textSize="30dp"
                android:inputType="number"
                android:id="@+id/ageEditable" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_email"
                android:textSize="30dp"/>
            <EditText
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:textSize="30dp"
                android:id="@+id/emailEditable" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_nickname"
                android:textSize="30dp"/>
            <EditText
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:textSize="30dp"
                android:id="@+id/nicknameEditable" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="30dp"/>
            <EditText
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:textSize="30dp"
                android:id="@+id/passwordEditable"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:layout_width="387dp"
            android:layout_height="312dp"
            android:text="@string/register_button"
            android:textSize="70dp"
            android:background="@drawable/drawable"
            android:onClick="onRegisterClick"
            android:layout_gravity="center"
            android:layout_marginTop="30dp" />
    </LinearLayout>
</RelativeLayout>
</ScrollView>
