<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_categories"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sportguide.Categories"
    android:background="@color/lightgreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_inspiration"
                android:width="150dp"
                android:textSize="20dp"
                android:id="@+id/inspirationButton"
                android:background="@drawable/categories"
                android:onClick="onInspirationClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_fitness"
                android:layout_marginLeft="10dp"
                android:height="150dp"
                android:width="160dp"
                android:textSize="20dp"
                android:background="@drawable/categories"
                android:onClick="onTrainingClick" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_rules"
                android:width="150dp"
                android:textSize="20dp"
                android:height="150dp"
                android:background="@drawable/categories"
                android:onClick="onRulesClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_news"
                android:layout_marginLeft="10dp"
                android:width="150dp"
                android:height="150dp"
                android:textSize="20dp"
                android:background="@drawable/categories"
                android:onClick="onNewsClick" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
